--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-    <title>Cratemate AI</title>
+    <title>Cratmate AI</title>
   </head>
   <body>
     <div id="root"></div>
